gen/libdwf_api.jl


function FDwfDigitalIOInputStatus64(hdwf, pfsInput)
    ccall((:FDwfDigitalIOInputStatus64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsInput)
end

function FDwfDigitalInReset(hdwf)
    ccall((:FDwfDigitalInReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalInConfigure(hdwf, fReconfigure, fStart)
    ccall((:FDwfDigitalInConfigure, libdwf), BOOL, (HDWF, BOOL, BOOL), hdwf, fReconfigure, fStart)
end

function FDwfDigitalInStatus(hdwf, fReadData, psts)
    ccall((:FDwfDigitalInStatus, libdwf), BOOL, (HDWF, BOOL, Ptr{DwfState}), hdwf, fReadData, psts)
end

function FDwfDigitalInStatusSamplesLeft(hdwf, pcSamplesLeft)
    ccall((:FDwfDigitalInStatusSamplesLeft, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcSamplesLeft)
end

function FDwfDigitalInStatusSamplesValid(hdwf, pcSamplesValid)
    ccall((:FDwfDigitalInStatusSamplesValid, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcSamplesValid)
end

function FDwfDigitalInStatusIndexWrite(hdwf, pidxWrite)
    ccall((:FDwfDigitalInStatusIndexWrite, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pidxWrite)
end

function FDwfDigitalInStatusAutoTriggered(hdwf, pfAuto)
    ccall((:FDwfDigitalInStatusAutoTriggered, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfAuto)
end

function FDwfDigitalInStatusData(hdwf, rgData, countOfDataBytes)
    ccall((:FDwfDigitalInStatusData, libdwf), BOOL, (HDWF, Ptr{Cvoid}, Cint), hdwf, rgData, countOfDataBytes)
end

function FDwfDigitalInStatusData2(hdwf, rgData, idxSample, countOfDataBytes)
    ccall((:FDwfDigitalInStatusData2, libdwf), BOOL, (HDWF, Ptr{Cvoid}, Cint, Cint), hdwf, rgData, idxSample, countOfDataBytes)
end

function FDwfDigitalInStatusNoise2(hdwf, rgData, idxSample, countOfDataBytes)
    ccall((:FDwfDigitalInStatusNoise2, libdwf), BOOL, (HDWF, Ptr{Cvoid}, Cint, Cint), hdwf, rgData, idxSample, countOfDataBytes)
end

function FDwfDigitalInStatusRecord(hdwf, pcdDataAvailable, pcdDataLost, pcdDataCorrupt)
    ccall((:FDwfDigitalInStatusRecord, libdwf), BOOL, (HDWF, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), hdwf, pcdDataAvailable, pcdDataLost, pcdDataCorrupt)
end

function FDwfDigitalInInternalClockInfo(hdwf, phzFreq)
    ccall((:FDwfDigitalInInternalClockInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, phzFreq)
end

function FDwfDigitalInClockSourceInfo(hdwf, pfsDwfDigitalInClockSource)
    ccall((:FDwfDigitalInClockSourceInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsDwfDigitalInClockSource)
end

function FDwfDigitalInClockSourceSet(hdwf, v)
    ccall((:FDwfDigitalInClockSourceSet, libdwf), BOOL, (HDWF, DwfDigitalInClockSource), hdwf, v)
end

function FDwfDigitalInClockSourceGet(hdwf, pv)
    ccall((:FDwfDigitalInClockSourceGet, libdwf), BOOL, (HDWF, Ptr{DwfDigitalInClockSource}), hdwf, pv)
end

function FDwfDigitalInDividerInfo(hdwf, pdivMax)
    ccall((:FDwfDigitalInDividerInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pdivMax)
end

function FDwfDigitalInDividerSet(hdwf, div)
    ccall((:FDwfDigitalInDividerSet, libdwf), BOOL, (HDWF, UInt32), hdwf, div)
end

function FDwfDigitalInDividerGet(hdwf, pdiv)
    ccall((:FDwfDigitalInDividerGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pdiv)
end

function FDwfDigitalInBitsInfo(hdwf, pnBits)
    ccall((:FDwfDigitalInBitsInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnBits)
end

function FDwfDigitalInSampleFormatSet(hdwf, nBits)
    ccall((:FDwfDigitalInSampleFormatSet, libdwf), BOOL, (HDWF, Cint), hdwf, nBits)
end

function FDwfDigitalInSampleFormatGet(hdwf, pnBits)
    ccall((:FDwfDigitalInSampleFormatGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnBits)
end

function FDwfDigitalInInputOrderSet(hdwf, fDioFirst)
    ccall((:FDwfDigitalInInputOrderSet, libdwf), BOOL, (HDWF, Cint), hdwf, fDioFirst)
end

function FDwfDigitalInBufferSizeInfo(hdwf, pnSizeMax)
    ccall((:FDwfDigitalInBufferSizeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnSizeMax)
end

function FDwfDigitalInBufferSizeSet(hdwf, nSize)
    ccall((:FDwfDigitalInBufferSizeSet, libdwf), BOOL, (HDWF, Cint), hdwf, nSize)
end

function FDwfDigitalInBufferSizeGet(hdwf, pnSize)
    ccall((:FDwfDigitalInBufferSizeGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnSize)
end

function FDwfDigitalInSampleModeInfo(hdwf, pfsDwfDigitalInSampleMode)
    ccall((:FDwfDigitalInSampleModeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsDwfDigitalInSampleMode)
end

function FDwfDigitalInSampleModeSet(hdwf, v)
    ccall((:FDwfDigitalInSampleModeSet, libdwf), BOOL, (HDWF, DwfDigitalInSampleMode), hdwf, v)
end

function FDwfDigitalInSampleModeGet(hdwf, pv)
    ccall((:FDwfDigitalInSampleModeGet, libdwf), BOOL, (HDWF, Ptr{DwfDigitalInSampleMode}), hdwf, pv)
end

function FDwfDigitalInSampleSensibleSet(hdwf, fs)
    ccall((:FDwfDigitalInSampleSensibleSet, libdwf), BOOL, (HDWF, UInt32), hdwf, fs)
end

function FDwfDigitalInSampleSensibleGet(hdwf, pfs)
    ccall((:FDwfDigitalInSampleSensibleGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfs)
end

function FDwfDigitalInAcquisitionModeInfo(hdwf, pfsacqmode)
    ccall((:FDwfDigitalInAcquisitionModeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsacqmode)
end

function FDwfDigitalInAcquisitionModeSet(hdwf, acqmode)
    ccall((:FDwfDigitalInAcquisitionModeSet, libdwf), BOOL, (HDWF, ACQMODE), hdwf, acqmode)
end

function FDwfDigitalInAcquisitionModeGet(hdwf, pacqmode)
    ccall((:FDwfDigitalInAcquisitionModeGet, libdwf), BOOL, (HDWF, Ptr{ACQMODE}), hdwf, pacqmode)
end

function FDwfDigitalInTriggerSourceSet(hdwf, trigsrc)
    ccall((:FDwfDigitalInTriggerSourceSet, libdwf), BOOL, (HDWF, TRIGSRC), hdwf, trigsrc)
end

function FDwfDigitalInTriggerSourceGet(hdwf, ptrigsrc)
    ccall((:FDwfDigitalInTriggerSourceGet, libdwf), BOOL, (HDWF, Ptr{TRIGSRC}), hdwf, ptrigsrc)
end

function FDwfDigitalInTriggerSlopeSet(hdwf, slope)
    ccall((:FDwfDigitalInTriggerSlopeSet, libdwf), BOOL, (HDWF, DwfTriggerSlope), hdwf, slope)
end

function FDwfDigitalInTriggerSlopeGet(hdwf, pslope)
    ccall((:FDwfDigitalInTriggerSlopeGet, libdwf), BOOL, (HDWF, Ptr{DwfTriggerSlope}), hdwf, pslope)
end

function FDwfDigitalInTriggerPositionInfo(hdwf, pnSamplesAfterTriggerMax)
    ccall((:FDwfDigitalInTriggerPositionInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pnSamplesAfterTriggerMax)
end

function FDwfDigitalInTriggerPositionSet(hdwf, cSamplesAfterTrigger)
    ccall((:FDwfDigitalInTriggerPositionSet, libdwf), BOOL, (HDWF, UInt32), hdwf, cSamplesAfterTrigger)
end

function FDwfDigitalInTriggerPositionGet(hdwf, pcSamplesAfterTrigger)
    ccall((:FDwfDigitalInTriggerPositionGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pcSamplesAfterTrigger)
end

function FDwfDigitalInTriggerPrefillSet(hdwf, cSamplesBeforeTrigger)
    ccall((:FDwfDigitalInTriggerPrefillSet, libdwf), BOOL, (HDWF, UInt32), hdwf, cSamplesBeforeTrigger)
end

function FDwfDigitalInTriggerPrefillGet(hdwf, pcSamplesBeforeTrigger)
    ccall((:FDwfDigitalInTriggerPrefillGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pcSamplesBeforeTrigger)
end

function FDwfDigitalInTriggerAutoTimeoutInfo(hdwf, psecMin, psecMax, pnSteps)
    ccall((:FDwfDigitalInTriggerAutoTimeoutInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax, pnSteps)
end

function FDwfDigitalInTriggerAutoTimeoutSet(hdwf, secTimeout)
    ccall((:FDwfDigitalInTriggerAutoTimeoutSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secTimeout)
end

function FDwfDigitalInTriggerAutoTimeoutGet(hdwf, psecTimeout)
    ccall((:FDwfDigitalInTriggerAutoTimeoutGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecTimeout)
end

function FDwfDigitalInTriggerInfo(hdwf, pfsLevelLow, pfsLevelHigh, pfsEdgeRise, pfsEdgeFall)
    ccall((:FDwfDigitalInTriggerInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}, Ptr{UInt32}, Ptr{UInt32}, Ptr{UInt32}), hdwf, pfsLevelLow, pfsLevelHigh, pfsEdgeRise, pfsEdgeFall)
end

function FDwfDigitalInTriggerSet(hdwf, fsLevelLow, fsLevelHigh, fsEdgeRise, fsEdgeFall)
    ccall((:FDwfDigitalInTriggerSet, libdwf), BOOL, (HDWF, UInt32, UInt32, UInt32, UInt32), hdwf, fsLevelLow, fsLevelHigh, fsEdgeRise, fsEdgeFall)
end

function FDwfDigitalInTriggerGet(hdwf, pfsLevelLow, pfsLevelHigh, pfsEdgeRise, pfsEdgeFall)
    ccall((:FDwfDigitalInTriggerGet, libdwf), BOOL, (HDWF, Ptr{UInt32}, Ptr{UInt32}, Ptr{UInt32}, Ptr{UInt32}), hdwf, pfsLevelLow, pfsLevelHigh, pfsEdgeRise, pfsEdgeFall)
end

function FDwfDigitalInTriggerResetSet(hdwf, fsLevelLow, fsLevelHigh, fsEdgeRise, fsEdgeFall)
    ccall((:FDwfDigitalInTriggerResetSet, libdwf), BOOL, (HDWF, UInt32, UInt32, UInt32, UInt32), hdwf, fsLevelLow, fsLevelHigh, fsEdgeRise, fsEdgeFall)
end

function FDwfDigitalInTriggerCountSet(hdwf, cCount, fRestart)
    ccall((:FDwfDigitalInTriggerCountSet, libdwf), BOOL, (HDWF, Cint, Cint), hdwf, cCount, fRestart)
end

function FDwfDigitalInTriggerLengthSet(hdwf, secMin, secMax, idxSync)
    ccall((:FDwfDigitalInTriggerLengthSet, libdwf), BOOL, (HDWF, Cdouble, Cdouble, Cint), hdwf, secMin, secMax, idxSync)
end

function FDwfDigitalInTriggerMatchSet(hdwf, iPin, fsMask, fsValue, cBitStuffing)
    ccall((:FDwfDigitalInTriggerMatchSet, libdwf), BOOL, (HDWF, Cint, UInt32, UInt32, Cint), hdwf, iPin, fsMask, fsValue, cBitStuffing)
end

function FDwfDigitalOutReset(hdwf)
    ccall((:FDwfDigitalOutReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalOutConfigure(hdwf, fStart)
    ccall((:FDwfDigitalOutConfigure, libdwf), BOOL, (HDWF, BOOL), hdwf, fStart)
end

function FDwfDigitalOutStatus(hdwf, psts)
    ccall((:FDwfDigitalOutStatus, libdwf), BOOL, (HDWF, Ptr{DwfState}), hdwf, psts)
end

function FDwfDigitalOutInternalClockInfo(hdwf, phzFreq)
    ccall((:FDwfDigitalOutInternalClockInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, phzFreq)
end

function FDwfDigitalOutTriggerSourceSet(hdwf, trigsrc)
    ccall((:FDwfDigitalOutTriggerSourceSet, libdwf), BOOL, (HDWF, TRIGSRC), hdwf, trigsrc)
end

function FDwfDigitalOutTriggerSourceGet(hdwf, ptrigsrc)
    ccall((:FDwfDigitalOutTriggerSourceGet, libdwf), BOOL, (HDWF, Ptr{TRIGSRC}), hdwf, ptrigsrc)
end

function FDwfDigitalOutRunInfo(hdwf, psecMin, psecMax)
    ccall((:FDwfDigitalOutRunInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax)
end

function FDwfDigitalOutRunSet(hdwf, secRun)
    ccall((:FDwfDigitalOutRunSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secRun)
end

function FDwfDigitalOutRunGet(hdwf, psecRun)
    ccall((:FDwfDigitalOutRunGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecRun)
end

function FDwfDigitalOutRunStatus(hdwf, psecRun)
    ccall((:FDwfDigitalOutRunStatus, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecRun)
end

function FDwfDigitalOutWaitInfo(hdwf, psecMin, psecMax)
    ccall((:FDwfDigitalOutWaitInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax)
end

function FDwfDigitalOutWaitSet(hdwf, secWait)
    ccall((:FDwfDigitalOutWaitSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secWait)
end

function FDwfDigitalOutWaitGet(hdwf, psecWait)
    ccall((:FDwfDigitalOutWaitGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecWait)
end

function FDwfDigitalOutRepeatInfo(hdwf, pnMin, pnMax)
    ccall((:FDwfDigitalOutRepeatInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}, Ptr{UInt32}), hdwf, pnMin, pnMax)
end

function FDwfDigitalOutRepeatSet(hdwf, cRepeat)
    ccall((:FDwfDigitalOutRepeatSet, libdwf), BOOL, (HDWF, UInt32), hdwf, cRepeat)
end

function FDwfDigitalOutRepeatGet(hdwf, pcRepeat)
    ccall((:FDwfDigitalOutRepeatGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pcRepeat)
end

function FDwfDigitalOutRepeatStatus(hdwf, pcRepeat)
    ccall((:FDwfDigitalOutRepeatStatus, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pcRepeat)
end

function FDwfDigitalOutTriggerSlopeSet(hdwf, slope)
    ccall((:FDwfDigitalOutTriggerSlopeSet, libdwf), BOOL, (HDWF, DwfTriggerSlope), hdwf, slope)
end

function FDwfDigitalOutTriggerSlopeGet(hdwf, pslope)
    ccall((:FDwfDigitalOutTriggerSlopeGet, libdwf), BOOL, (HDWF, Ptr{DwfTriggerSlope}), hdwf, pslope)
end

function FDwfDigitalOutRepeatTriggerSet(hdwf, fRepeatTrigger)
    ccall((:FDwfDigitalOutRepeatTriggerSet, libdwf), BOOL, (HDWF, BOOL), hdwf, fRepeatTrigger)
end
